# cgx

./: .gitignore  AGENTS.md  AI_POLICY.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE-APACHE  README.md  SECURITY.md  action.yml  cgx-example.toml  clippy.toml  deny.toml  dist-workspace.toml  release-plz.toml  rustfmt-nightly.toml  sgconfig.yml  taplo.toml  typos.toml
.ast-grep/rule-tests/: no-llm-ticks-md-test.yml  no-llm-ticks-rust-test.yml  panic-requires-message-test.yml  use-at-module-scope-test.yml
.ast-grep/rules/: no-llm-ticks-md.yml  no-llm-ticks-rust.yml  panic-requires-message.yml  use-at-module-scope.yml
.claude/: settings.json
.github/: dependabot.yml
.github/actions/cgx-action/: install.ps1  install.sh  prefetch.sh
.github/workflows/: action-smoke-test.yml  ci.yml  dependabot-auto-merge.yml  dist-dry-run-release.yml  full-platform-tests.yml  release-plz.yml  release.yml
cargo-cgx/: Cargo.toml  README.md
cargo-cgx/tests/: integration.rs
cgx/: Cargo.toml
cgx-core/: Cargo.toml
cgx-core/src/: builder.rs  cache.rs  cargo.rs  cli.rs  config.rs  crate_resolver.rs  cratespec.rs  downloader.rs  error.rs  git.rs  helpers.rs  http.rs  lib.rs  logging.rs  registry.rs  runner.rs  sbom.rs  target.rs  testdata.rs
cgx-core/src/bin_resolver/: mod.rs
cgx-core/src/bin_resolver/providers/: archive.rs  binstall.rs  checksum.rs  github.rs  gitlab.rs  mod.rs  quickinstall.rs
cgx-core/src/messages/: build.rs  build_cache.rs  cgx.rs  crate_resolution.rs  git.rs  mod.rs  prebuilt_binary.rs  runner.rs  source.rs
cgx/src/: lib.rs  logging.rs  reporter.rs
cgx/tests/integration/: basic.rs  cargo.rs  config.rs  defaults.rs  git_sources.rs  main.rs  prebuilt_binaries.rs  utils.rs
